Version: 0.3.2
Date: ????
  Bugfixes:
    - Research events are now sent to friendly forces
  Scripting:
    - Added a parameter to send_message to skip clearing the chat.
      This also makes the message actually make a sound when printed since it's not piggy-backing on the entire chat print which is silent by necessity
    - Can now handle colors that are arrays rather than objects
  Issues:
    - The direct-printing of not clearing the chat uses a hacked-together method of printing the messsage. Leading to times where it might print incorrectly because it doesn't do the pre-processing that is done for internal use.
---------------------------------------------------------------------------------------------------
Version: 0.3.1
Date: 2024-03-12
  Bugfixes:
    - Fixed CHARACTER always being the killer. Still might happen with edge cases
    - 0.3.0 migration now works. Will go back and fix old versions with broken migrations if requested
  Info:
    - Refactored most functional code to be in separate files
  Scripting:
    - Added an interface to disable event(/command) handlers so you can implement your own
---------------------------------------------------------------------------------------------------
Version: 0.3.0
Date: 2024-03-10
  Major Features:
    - Other mods can now use the interface to print messages that won't get deleted
  Bugfixes:
    - General messages now actually use their color
    - Added admin checking on promote/demote so it doesn't falsely report something has happened
  Info:
    - Refactored Chats to now just use a localized string instead of a 'header' and 'message'
---------------------------------------------------------------------------------------------------
Version: 0.2.8
Date: 2024-03-09
  Major Features:
    - Chat now naturally prints a select portion, only for opening chat to print everything
  Changes:
    - Improved research queue messages
    - Now uses command listener for admin promotion so it can respond accurately